added more info in about section

--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
 			<hr />
 			<h2><code>hello fellow humans.</code></h2>
 			<h5>At <b>jukebx</b>, we strive to making your website great.<br>Not just a great website, the perfect website for you. We focus on the tiniest of details along with the big ones to make your site perfect.<br>We know a lot about design, code, and UI/UX, so we know that we are the best choice for making your site.</h5>
+			<h2>even more about us</h2>
+			<h5>We are a group of programmers who like to make amazing stuff. We love helping others, just like you! Our names are Cole, Addison, Brandon, Drew, Max, TJ, and Alexander and we are all ready to help! Just contact us at colegawin@gmail.com</h5>
 			<a class="btn btn-primary btn-raised btn-round">Learn about our styles<div class="ripple-container"></div></a>
 		</div>
 	</div>
