--- a/index.html
+++ b/index.html
@@ -283,7 +283,8 @@
 	    	<div class="container">
 	    		<h1>Portfolio</h1>
 	    		<hr>
-	    		<div class="row">
+	    		<h2>Under Construction...</h2>
+	    		<!--<div class="row">-->
   					<div class="col-xs-6 col-md-3">
     					<a href="#" class="thumbnail">
       						<img src="..." alt="..." class="img-raised">
@@ -345,7 +346,7 @@
 	            </ul>
 	        </nav>
 	        <div class="copyright pull-right">
-	            &copy; 2016, made with <i class="material-icons">favorite</i> by Creative Tim for a better web.
+	            &copy; 2016, made with <i class="material-icons">favorite</i> by jukebx. Thanks!
 	        </div>
 	    </div>
 	</footer>
