--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 	    		<h1>Portfolio</h1>
 	    		<hr>
 	    		<h2>Under Construction...</h2>
-	    		<!--<div class="row">-->
+	    		<!--<div class="row">
   					<div class="col-xs-6 col-md-3">
     					<a href="#" class="thumbnail">
       						<img src="..." alt="..." class="img-raised">
@@ -320,7 +320,7 @@
       						<img src="..." alt="..." class="img-raised">
     					</a>
   					</div>
-				</div>
+				</div>-->
 	    	</div>
 	    </div>
 	</div>
