--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body class="index-page">
 <!-- Navbar -->
-<nav class="navbar navbar-transparent navbar-fixed-top navbar-color-on-scroll">
+<nav class="navbar navbar-fixed-top">
 	<div class="container">
         <div class="navbar-header">
 	    	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-index">
@@ -103,7 +103,6 @@
 	</div>
 </nav>
 <!-- End Navbar -->
-<div class="wrapper">
 	<div class="header header-filter" style="background: url('assets/img/bg2.jpeg'); background-repeat:repeat;">
 		<div class="container">
 			<div class="row">
@@ -118,6 +117,10 @@
 		</div>
 	</div>
 
+<div class="wrapper"><div style="position:absolute;width:100%; 
+  background: linear-gradient(45deg, rgba(192, 57, 43,1.0) 0%, rgba(230, 126, 34,1.0) 100%);
+  background: -moz-linear-gradient(45deg, rgba(192, 57, 43,1.0) 0%, rgba(230, 126, 34,1.0) 100%);
+  background: -webkit-linear-gradient(45deg, rgba(192, 57, 43,1.0) 0%, rgba(230, 126, 34,1.0) 100%); background-attachment:fixed; z-index:9;">
 	<div class="main main-raised" id="about">
 		<div class="container" style="text-align:center; padding:20px;">
 			<h1>About us</h1>
@@ -200,19 +203,6 @@
 						</div>
 		</div>
 	</div>
-	<div class="header header-filter otherColor" style="background: url('assets/img/bg2.jpeg') !important; background-repeat:repeat; margin-top:-85vh;">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2">
-					<div class="brand">
-						<h1>we can help you.</h1>
-					</div>
-				</div>
-			</div>
-
-		</div>
-	</div>
-
 	<div class="main main-raised" style="margin-top:100px; text-align:center;" id="styles">
 		<div class="section section-basic">
 	    	<div class="container">
@@ -349,29 +339,7 @@
 	            &copy; 2016, made with <i class="material-icons">favorite</i> by jukebx. Thanks!
 	        </div>
 	    </div>
-	</footer>
-</div>
-
-<!-- Sart Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-					<i class="material-icons">clear</i>
-				</button>
-				<h4 class="modal-title">Modal title</h4>
-			</div>
-			<div class="modal-body">
-				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
-				</p>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default btn-simple">Nice Button</button>
-				<button type="button" class="btn btn-danger btn-simple" data-dismiss="modal">Close</button>
-			</div>
-		</div>
-	</div>
+	</footer></div>
 </div>
 <!--  End Modal -->
 
