--- a/Genius-Hour/index.html
+++ b/Genius-Hour/index.html
@@ -1,18 +1,16 @@
-<html class="-webkit- gr__s_codepen_io">
+<html>
 
 <head>
     <meta charset="UTF-8">
     <meta name="google" value="notranslate">
-    <title>CodePen - Word Guessing Game</title>
+    <title>Hangman!</title>
     <meta name="viewport" content="width=device-width">
     <link rel="author" href="http://google.com/+natewiley">
-    <link rel="stylesheet" href="http://codepen.io/assets/reset/reset.css">
     <link rel="stylesheet prefetch" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet prefetch" href="bootstrap.min.css">
     
     <link rel="stylesheet prefetch" href="ct-paper.css">
     <link rel="stylesheet" href="style.css">
-    <script src="http://assets.codepen.io/assets/libs/prefixfree.min-d258f6cb24f3a877e4fb83b348ec8a3f.js"></script>
 </head>
 
 <body data-gr-c-s-loaded="true">
