--- a/Squares/index.html
+++ b/Squares/index.html
@@ -73,13 +73,13 @@
 </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col col-xlg col-md-12 header palette-peter-river">
+            <div class="col col-xlg col-sm-12 header palette-peter-river">
                 <div class="col-inner">
                     <h1>Juicy Pouch.</h1>
                     <h3><i>We make juice yummy.</i></h3>
                 </div>
             </div>
-            <div class="col col-sm col-md-12 mdc-bg-white">
+            <div class="col col-sm col-sm-12 mdc-bg-white">
                 <div class="col-inner">
                     <h1>ABOUT US</h1>
                 </div>
