--- a/MothersDay/index.html
+++ b/MothersDay/index.html
@@ -1,3 +1,8 @@
+
+<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/jquery.resizeOnApproach.1.0.min.js"></script>
+<link rel="canonical" href="main.css">
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="main.js"></script>
 <nav class="main-nav">
     <ul class="main-nav-list">
       <li class="evolution"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-evolution@2x.png" alt="Evolution and inheritance" title="Evolution and inheritance"></li>
