--- a/MothersDay/index.html
+++ b/MothersDay/index.html
@@ -1,17 +1,87 @@
+<html class=""><head><script src="//assets.codepen.io/assets/editor/live/console_runner-d1fe8d626b138a1ec40e0f6121de6549.js"></script><script src="//assets.codepen.io/assets/editor/live/events_runner-7cac1e4694e7b2b7a39c26e725e9d7ae.js"></script><script src="//assets.codepen.io/assets/editor/live/css_live_reload_init-bad5f8d322020126e7b4287d497c7efe.js"></script><meta charset="UTF-8"><meta name="robots" content="noindex"><link rel="canonical" href="http://codepen.io/adrianparr/pen/uaLjK">
 
-<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/jquery.resizeOnApproach.1.0.min.js"></script>
-<link rel="canonical" href="main.css">
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="main.js"></script>
+
+<style class="cp-pen-styles">html, body {
+  padding: 0;
+  margin: 0;
+}
+
+.main-nav {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  font-size: 0;
+}
+
+.main-nav-list {
+  display: inline-block;
+  padding: 0;
+  list-style: none;
+}
+
+.main-nav-list li {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  min-width: 50px;
+  min-height: 50px;
+}
+
+.main-nav-list li.habitats {
+  background-color: #9ae900;
+}
+
+.main-nav-list li.animals {
+  background-color: #00cb79;
+}
+
+.main-nav-list li.materials {
+  background-color: #ffd600;
+}
+
+.main-nav-list li.earth {
+  background-color: #ffa200;
+}
+
+.main-nav-list li.forces {
+  background-color: #ff2200;
+}
+
+.main-nav-list li.evolution {
+  background-color: #a8218e;
+}
+
+.main-nav-list li.light {
+  background-color: #00a7ef;
+}
+
+.main-nav-list li.electricity {
+  background-color: #00989a;
+}
+
+.main-nav-list li img {
+  display: inline-block;
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+}
+</style></head><body>
 <nav class="main-nav">
     <ul class="main-nav-list">
-      <li class="evolution"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-evolution@2x.png" alt="Evolution and inheritance" title="Evolution and inheritance"></li>
-      <li class="light"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-light@2x.png" alt="Light" title="Light"></li>
-      <li class="earth"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-earth@2x.png" alt="Earth and space" title="Earth and space"></li>
-      <li class="habitats"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-habitats@2x.png" alt="Living things and their habitats" title="Living things and their habitats"></li>
-      <li class="forces"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-forces@2x.png" alt="Forces" title="Forces"></li>
-      <li class="animals"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-animals@2x.png" alt="Animals, including humans" title="Animals, including humans"></li>
-      <li class="electricity"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-electricity@2x.png" alt="Electricity" title="Electricity"></li>
-      <li class="materials"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-materials@2x.png" alt="Properties and changes of materials" title="Properties and changes of materials"></li>
+      <li class="evolution"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-evolution@2x.png" alt="Evolution and inheritance" title="Evolution and inheritance" style="width: 50px;"></li>
+      <li class="light"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-light@2x.png" alt="Light" title="Light" style="width: 50px;"></li>
+      <li class="earth"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-earth@2x.png" alt="Earth and space" title="Earth and space" style="width: 50px;"></li>
+      <li class="habitats"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-habitats@2x.png" alt="Living things and their habitats" title="Living things and their habitats" style="width: 50px;"></li>
+      <li class="forces"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-forces@2x.png" alt="Forces" title="Forces" style="width: 50px;"></li>
+      <li class="animals"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-animals@2x.png" alt="Animals, including humans" title="Animals, including humans" style="width: 50px;"></li>
+      <li class="electricity"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-electricity@2x.png" alt="Electricity" title="Electricity" style="width: 50px;"></li>
+      <li class="materials"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-materials@2x.png" alt="Properties and changes of materials" title="Properties and changes of materials" style="width: 50px;"></li>
   </ul>
 </nav>
+
+<script src="//assets.codepen.io/assets/common/stopExecutionOnTimeout.js?t=1"></script><script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script><script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/jquery.resizeOnApproach.1.0.min.js"></script>
+<script src="main.js"></script>
+</body></html>
