--- a/MothersDay/index.html
+++ b/MothersDay/index.html
@@ -71,14 +71,14 @@
 </style></head><body>
 <nav class="main-nav">
     <ul class="main-nav-list">
-      <li class="evolution"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-evolution@2x.png" alt="Evolution and inheritance" title="Evolution and inheritance" style="width: 50px;"></li>
+      <li class="evolution"><img src="https://cdn2.iconfinder.com/data/icons/new-year-resolutions/64/resolutions-14-128.png" alt="Flowers" title="Evolution and inheritance" style="width: 50px;"></li>
       <li class="light"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-light@2x.png" alt="Light" title="Light" style="width: 50px;"></li>
       <li class="earth"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-earth@2x.png" alt="Earth and space" title="Earth and space" style="width: 50px;"></li>
       <li class="habitats"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-habitats@2x.png" alt="Living things and their habitats" title="Living things and their habitats" style="width: 50px;"></li>
       <li class="forces"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-forces@2x.png" alt="Forces" title="Forces" style="width: 50px;"></li>
       <li class="animals"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-animals@2x.png" alt="Animals, including humans" title="Animals, including humans" style="width: 50px;"></li>
       <li class="electricity"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-electricity@2x.png" alt="Electricity" title="Electricity" style="width: 50px;"></li>
-      <li class="materials"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-materials@2x.png" alt="Properties and changes of materials" title="Properties and changes of materials" style="width: 50px;"></li>
+      <li class="materials"><img src="https://cdn3.iconfinder.com/data/icons/ballicons-reloaded-free/512/icon-68-128.png" alt="Coupons" title="Properties and changes of materials" style="width: 50px;"></li>
   </ul>
 </nav>
 
