--- a/MothersDay/index.html
+++ b/MothersDay/index.html
@@ -76,7 +76,7 @@
       <li class="earth"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-earth@2x.png" alt="Earth and space" title="Earth and space" style="width: 50px;"></li>
       <li class="habitats"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-habitats@2x.png" alt="Living things and their habitats" title="Living things and their habitats" style="width: 50px;"></li>
       <li class="forces"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-forces@2x.png" alt="Forces" title="Forces" style="width: 50px;"></li>
-      <li class="animals"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-animals@2x.png" alt="Animals, including humans" title="Animals, including humans" style="width: 50px;"></li>
+      <li class="animals"><img src="https://cdn3.iconfinder.com/data/icons/badger-s-christmas/300/present-128.png" alt="Card" style="width: 50px;"></li>
       <li class="electricity"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-electricity@2x.png" alt="Electricity" title="Electricity" style="width: 50px;"></li>
       <li class="materials"><img src="https://cdn3.iconfinder.com/data/icons/ballicons-reloaded-free/512/icon-68-128.png" alt="Coupons" title="Properties and changes of materials" style="width: 50px;"></li>
   </ul>
