--- a/MothersDay/index.html
+++ b/MothersDay/index.html
@@ -25,7 +25,7 @@
 .main-nav-list li {
   display: inline-block;
   margin: 0;
-  padding: 0;
+  padding: 5px;
   min-width: 50px;
   min-height: 50px;
 }
