--- a/MothersDay/index.html
+++ b/MothersDay/index.html
@@ -72,13 +72,13 @@
 <nav class="main-nav">
     <ul class="main-nav-list">
       <li class="evolution"><img src="https://cdn2.iconfinder.com/data/icons/new-year-resolutions/64/resolutions-14-128.png" alt="Flowers" title="Flowers" style="width: 50px;"></li>
-      <li class="light"><img src="https://cdn3.iconfinder.com/data/icons/luchesa-vol-9/128/Home-128.png" alt="Light" title="Light" style="width: 50px;"></li>
-      <li class="earth"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-earth@2x.png" alt="Earth and space" title="Earth and space" style="width: 50px;"></li>
+      <li class="light"><img src="https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678085-house-128.png" alt="Make this your homepage!" title="Make this your homepage!" style="width: 50px;"></li>
+      <li class="earth"><img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/image-128.png" alt="Change BG" title="Change BG" style="width: 50px;"></li>
       <li class="habitats"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-habitats@2x.png" alt="Living things and their habitats" title="Living things and their habitats" style="width: 50px;"></li>
       <li class="forces"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-forces@2x.png" alt="Forces" title="Forces" style="width: 50px;"></li>
-      <li class="animals"><img src="https://cdn3.iconfinder.com/data/icons/badger-s-christmas/300/present-128.png" alt="Card" style="width: 50px;"></li>
+      <li class="animals"><img src="https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678132-gift-128.png" alt="Card" title="Card" style="width: 50px;"></li>
       <li class="electricity"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-electricity@2x.png" alt="Electricity" title="Electricity" style="width: 50px;"></li>
-      <li class="materials"><img src="https://cdn3.iconfinder.com/data/icons/ballicons-reloaded-free/512/icon-68-128.png" alt="Coupons" title="Coupons" style="width: 50px;"></li>
+      <li class="materials"><img src="https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678131-money-128.png" alt="Coupons" title="Coupons" style="width: 50px;"></li>
   </ul>
 </nav>
 
