--- a/MothersDay/index.html
+++ b/MothersDay/index.html
@@ -74,10 +74,10 @@
       <li class="evolution"><img src="https://cdn2.iconfinder.com/data/icons/new-year-resolutions/64/resolutions-14-128.png" alt="Flowers" title="Flowers" style="width: 50px;"></li>
       <li class="light"><img src="https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678085-house-128.png" alt="Make this your homepage!" title="Make this your homepage!" style="width: 50px;"></li>
       <li class="earth"><img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/image-128.png" alt="Change BG" title="Change BG" style="width: 50px;"></li>
-      <li class="habitats"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-habitats@2x.png" alt="Living things and their habitats" title="Living things and their habitats" style="width: 50px;"></li>
-      <li class="forces"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-forces@2x.png" alt="Forces" title="Forces" style="width: 50px;"></li>
+      <li class="habitats"><img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/star-128.png" alt="Star" title="Star" style="width: 50px;"></li>
+      <li class="forces"><img src="https://cdn3.iconfinder.com/data/icons/emoticons-vol-1/64/_hippie-128.png" alt="Be happy!" title="Be happy!" style="width: 50px;"></li>
       <li class="animals"><img src="https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678132-gift-128.png" alt="Card" title="Card" style="width: 50px;"></li>
-      <li class="electricity"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/main-nav-electricity@2x.png" alt="Electricity" title="Electricity" style="width: 50px;"></li>
+      <li class="electricity"><img src="https://cdn1.iconfinder.com/data/icons/apps-and-software/256/Facebook-128.png" alt="Facebook" title="Facebook" style="width: 50px;"></li>
       <li class="materials"><img src="https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678131-money-128.png" alt="Coupons" title="Coupons" style="width: 50px;"></li>
   </ul>
 </nav>
