--- a/MothersDay/index.html
+++ b/MothersDay/index.html
@@ -77,7 +77,7 @@
       <li class="habitats"><img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/star-128.png" alt="Star" title="Star" style="width: 50px;"></li>
       <li class="forces"><img src="https://cdn3.iconfinder.com/data/icons/emoticons-vol-1/64/_hippie-128.png" alt="Be happy!" title="Be happy!" style="width: 50px;"></li>
       <li class="animals"><img src="https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678132-gift-128.png" alt="Card" title="Card" style="width: 50px;"></li>
-      <li class="electricity"><img src="https://cdn1.iconfinder.com/data/icons/apps-and-software/256/Facebook-128.png" alt="Facebook" title="Facebook" style="width: 50px;"></li>
+      <li class="electricity"><img src="https://cdn1.iconfinder.com/data/icons/apps-and-software/256/Facebook-128.png" alt="Share on Facebook" title="Share onFacebook" style="width: 50px;"></li>
       <li class="materials"><img src="https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678131-money-128.png" alt="Coupons" title="Coupons" style="width: 50px;"></li>
   </ul>
 </nav>
