--- a/MothersDay/index.html
+++ b/MothersDay/index.html
@@ -1,87 +1,19 @@
-<html class=""><head><script src="//assets.codepen.io/assets/editor/live/console_runner-d1fe8d626b138a1ec40e0f6121de6549.js"></script><script src="//assets.codepen.io/assets/editor/live/events_runner-7cac1e4694e7b2b7a39c26e725e9d7ae.js"></script><script src="//assets.codepen.io/assets/editor/live/css_live_reload_init-bad5f8d322020126e7b4287d497c7efe.js"></script><meta charset="UTF-8"><meta name="robots" content="noindex"><link rel="canonical" href="http://codepen.io/adrianparr/pen/uaLjK">
-
-
-<style class="cp-pen-styles">html, body {
-  padding: 0;
-  margin: 0;
-}
-
-.main-nav {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  text-align: center;
-  font-size: 0;
-}
-
-.main-nav-list {
-  display: inline-block;
-  padding: 0;
-  list-style: none;
-}
-
-.main-nav-list li {
-  display: inline-block;
-  margin: 0;
-  padding: 5px;
-  min-width: 50px;
-  min-height: 50px;
-}
-
-.main-nav-list li.habitats {
-  background-color: #9ae900;
-}
-
-.main-nav-list li.animals {
-  background-color: #00cb79;
-}
-
-.main-nav-list li.materials {
-  background-color: #ffd600;
-}
-
-.main-nav-list li.earth {
-  background-color: #ffa200;
-}
-
-.main-nav-list li.forces {
-  background-color: #ff2200;
-}
-
-.main-nav-list li.evolution {
-  background-color: #a8218e;
-}
-
-.main-nav-list li.light {
-  background-color: #00a7ef;
-}
-
-.main-nav-list li.electricity {
-  background-color: #00989a;
-}
-
-.main-nav-list li img {
-  display: inline-block;
-  cursor: pointer;
-  margin: 0;
-  padding: 0;
-}
-</style></head><body>
+<html class=""><head><script src="http://assets.codepen.io/assets/editor/live/console_runner-d1fe8d626b138a1ec40e0f6121de6549.js"></script><script src="http://assets.codepen.io/assets/editor/live/events_runner-7cac1e4694e7b2b7a39c26e725e9d7ae.js"></script><script src="http://assets.codepen.io/assets/editor/live/css_live_reload_init-bad5f8d322020126e7b4287d497c7efe.js"></script><meta charset="UTF-8"><meta name="robots" content="noindex"><link rel="canonical" href="http:http://codepen.io/adrianparr/pen/uaLjK">
+<link href="main.css" rel="stylesheet">
+</head><body>
 <nav class="main-nav">
     <ul class="main-nav-list">
-      <li class="evolution"><img src="https://cdn2.iconfinder.com/data/icons/new-year-resolutions/64/resolutions-14-128.png" alt="Flowers" title="Flowers" style="width: 50px;"></li>
-      <li class="light"><img src="https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678085-house-128.png" alt="Make this your homepage!" title="Make this your homepage!" style="width: 50px;"></li>
-      <li class="earth"><img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/image-128.png" alt="Change BG" title="Change BG" style="width: 50px;"></li>
-      <li class="habitats"><img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/star-128.png" alt="Star" title="Star" style="width: 50px;"></li>
-      <li class="forces"><img src="https://cdn3.iconfinder.com/data/icons/emoticons-vol-1/64/_hippie-128.png" alt="Be happy!" title="Be happy!" style="width: 50px;"></li>
-      <li class="animals"><img src="https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678132-gift-128.png" alt="Card" title="Card" style="width: 50px;"></li>
-      <li class="electricity"><img src="https://cdn1.iconfinder.com/data/icons/apps-and-software/256/Facebook-128.png" alt="Share on Facebook" title="Share onFacebook" style="width: 50px;"></li>
-      <li class="materials"><img src="https://cdn0.iconfinder.com/data/icons/small-n-flat/24/678131-money-128.png" alt="Coupons" title="Coupons" style="width: 50px;"></li>
+      <li class="evolution"><img src="http://cdn2.iconfinder.com/data/icons/new-year-resolutions/64/resolutions-14-128.png" alt="Flowers" title="Flowers" style="width: 50px;"></li>
+      <li class="light"><img src="http://cdn0.iconfinder.com/data/icons/small-n-flat/24/678085-house-128.png" alt="Make this your homepage!" title="Make this your homepage!" style="width: 50px;"></li>
+      <li class="earth"><img src="http://cdn4.iconfinder.com/data/icons/small-n-flat/24/image-128.png" alt="Change BG" title="Change BG" style="width: 50px;"></li>
+      <li class="habitats"><img src="http://cdn4.iconfinder.com/data/icons/small-n-flat/24/star-128.png" alt="Star" title="Star" style="width: 50px;"></li>
+      <li class="forces"><img src="http://cdn3.iconfinder.com/data/icons/emoticons-vol-1/64/_hippie-128.png" alt="Be happy!" title="Be happy!" style="width: 50px;"></li>
+      <li class="animals"><img src="http://cdn0.iconfinder.com/data/icons/small-n-flat/24/678132-gift-128.png" alt="Card" title="Card" style="width: 50px;"></li>
+      <li class="electricity"><img src="http://cdn1.iconfinder.com/data/icons/apps-and-software/256/Facebook-128.png" alt="Share on Facebook" title="Share onFacebook" style="width: 50px;"></li>
+      <li class="materials"><img src="http://cdn0.iconfinder.com/data/icons/small-n-flat/24/678131-money-128.png" alt="Coupons" title="Coupons" style="width: 50px;"></li>
   </ul>
 </nav>
 
-<script src="//assets.codepen.io/assets/common/stopExecutionOnTimeout.js?t=1"></script><script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script><script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/jquery.resizeOnApproach.1.0.min.js"></script>
+<script src="http://assets.codepen.io/assets/common/stopExecutionOnTimeout.js?t=1"></script><script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script><script src="http://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/jquery.resizeOnApproach.1.0.min.js"></script>
 <script src="main.js"></script>
 </body></html>
