--- a/MothersDay/index.html
+++ b/MothersDay/index.html
@@ -3,7 +3,7 @@
 </head><body>
 <nav class="main-nav">
     <ul class="main-nav-list">
-      <li class="evolution"><img src="http://cdn2.iconfinder.com/data/icons/new-year-resolutions/64/resolutions-14-128.png" alt="Flowers" title="Flowers" style="width: 50px;"></li>
+      <li class="evolution flowerToggle"><img src="http://cdn2.iconfinder.com/data/icons/new-year-resolutions/64/resolutions-14-128.png" alt="Flowers" title="Flowers" style="width: 50px;"></li>
       <li class="light"><img src="http://cdn0.iconfinder.com/data/icons/small-n-flat/24/678085-house-128.png" alt="Make this your homepage!" title="Make this your homepage!" style="width: 50px;"></li>
       <li class="earth"><img src="http://cdn4.iconfinder.com/data/icons/small-n-flat/24/image-128.png" alt="Change BG" title="Change BG" style="width: 50px;"></li>
       <li class="habitats"><img src="http://cdn4.iconfinder.com/data/icons/small-n-flat/24/star-128.png" alt="Star" title="Star" style="width: 50px;"></li>
