--- a/MothersDay/index.html
+++ b/MothersDay/index.html
@@ -1,6 +1,9 @@
-<html class=""><head><script src="http://assets.codepen.io/assets/editor/live/console_runner-d1fe8d626b138a1ec40e0f6121de6549.js"></script><script src="http://assets.codepen.io/assets/editor/live/events_runner-7cac1e4694e7b2b7a39c26e725e9d7ae.js"></script><script src="http://assets.codepen.io/assets/editor/live/css_live_reload_init-bad5f8d322020126e7b4287d497c7efe.js"></script><meta charset="UTF-8"><meta name="robots" content="noindex"><link rel="canonical" href="http:http://codepen.io/adrianparr/pen/uaLjK">
+<html class=""><head>
 <link href="main.css" rel="stylesheet">
-</head><body>
+</head>
+<body>
+<div class="before">
+</div>
 <nav class="main-nav">
     <ul class="main-nav-list">
       <li class="evolution flowerToggle"><img src="http://cdn2.iconfinder.com/data/icons/new-year-resolutions/64/resolutions-14-128.png" alt="Flowers" title="Flowers" style="width: 50px;"></li>
@@ -14,6 +17,6 @@
   </ul>
 </nav>
 
-<script src="http://assets.codepen.io/assets/common/stopExecutionOnTimeout.js?t=1"></script><script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script><script src="http://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/jquery.resizeOnApproach.1.0.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script><script src="http://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/jquery.resizeOnApproach.1.0.min.js"></script>
 <script src="main.js"></script>
 </body></html>
