--- a/MothersDay/index.html
+++ b/MothersDay/index.html
@@ -4,12 +4,13 @@
 <body>
 <div class="before">
 </div>
+<div class="before">
+</div>
 <nav class="main-nav">
     <ul class="main-nav-list">
       <li class="evolution flowerToggle"><img src="http://cdn2.iconfinder.com/data/icons/new-year-resolutions/64/resolutions-14-128.png" alt="Flowers" title="Flowers" style="width: 50px;"></li>
-      <li class="light"><img src="http://cdn0.iconfinder.com/data/icons/small-n-flat/24/678085-house-128.png" alt="Make this your homepage!" title="Make this your homepage!" style="width: 50px;"></li>
-      <li class="earth"><img src="http://cdn4.iconfinder.com/data/icons/small-n-flat/24/image-128.png" alt="Change BG" title="Change BG" style="width: 50px;"></li>
-      <li class="habitats"><img src="http://cdn4.iconfinder.com/data/icons/small-n-flat/24/star-128.png" alt="Star" title="Star" style="width: 50px;"></li>
+      <li class="light homepage"><img src="http://cdn0.iconfinder.com/data/icons/small-n-flat/24/678085-house-128.png" alt="Make this your homepage!" title="Make this your homepage!" style="width: 50px;"></li>
+      <li class="habitats star"><img src="http://cdn4.iconfinder.com/data/icons/small-n-flat/24/star-128.png" alt="Star" title="Star" style="width: 50px;"></li>
       <li class="forces"><img src="http://cdn3.iconfinder.com/data/icons/emoticons-vol-1/64/_hippie-128.png" alt="Be happy!" title="Be happy!" style="width: 50px;"></li>
       <li class="animals"><img src="http://cdn0.iconfinder.com/data/icons/small-n-flat/24/678132-gift-128.png" alt="Card" title="Card" style="width: 50px;"></li>
       <li class="electricity"><img src="http://cdn1.iconfinder.com/data/icons/apps-and-software/256/Facebook-128.png" alt="Share on Facebook" title="Share onFacebook" style="width: 50px;"></li>
