--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	    	<a href="http://www.creative-tim.com">
 	        	<div class="logo-container">
 	                <div class="logo">
-	                    <img src="assets/img/logo.png" alt="!" rel="tooltip" title="<b>Material Kit</b> was Designed & Coded with care by the staff from <b>Creative Tim</b>" data-placement="bottom" data-html="true">
+	                    <img src="assets/img/logo.png" alt="!" rel="tooltip" title="<b>We are awesome!</b> yeah." data-placement="bottom" data-html="true">
 	                </div>
 	                <div class="brand">
 	                    <h4>jukebx</h4>
@@ -73,7 +73,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="http://www.creative-tim.com/product/material-kit" target="_blank" class="btn">
+					<a href="mailto:colegawin@gmail.com" target="_blank" class="btn">
 						<i class="material-icons">chat</i> Contact us
 					</a>
 				</li>
