--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	        	<span class="icon-bar"></span>
 	        	<span class="icon-bar"></span>
 	    	</button>
-	    	<a href="http://www.creative-tim.com">
+	    	<a href="#">
 	        	<div class="logo-container">
 	                <div class="logo">
 	                    <img src="assets/img/logo.png" alt="!" rel="tooltip" title="<b>We are awesome!</b> yeah." data-placement="bottom" data-html="true">
