--- a/creato/index.html
+++ b/creato/index.html
@@ -48,6 +48,7 @@
           color:white !important;
           top:calc(100% - 88px);
           left:calc(100% - 88px);
+          z-index:11;
         }
         .modal-backdrop.in{
           opacity:0.6 !important;
@@ -158,6 +159,10 @@
     </div>
     <div class="navbar-fixed-bottom alert alert-dismissible alert-danger copied error" style="text-align:center;">
       <i class="material-icons">close</i>
+    </div>
+    <div class="navbar-fixed-bottom alert alert-dismissible alert-info copied resizing" style="text-align:center;">
+      <i class="material-icons">insert_emoticon</i>
+      <p>I like being resized!!!</p>
     </div>
 
     <div class="modal" id="simple-dialog">
